--- a/index.html
+++ b/index.html
@@ -6873,6 +6873,7 @@ UNIMPORTANT STYLES BEGIN HERE
                     <div id="fundperformance" class="dvFundPerformance commonDivFunds">
                         <div class="columWrapper clearfix">
                             <h2 class="titleDv">Fund Performance</h2>
+                            <p>Please visit our website at <a href="https://mutualfund.adityabirlacapital.com/wealth-creation-solutions/aditya-birla-sun-life-india-gennext-fund">Aditya Birla Sun Life India GenNext Fund</a> for detailed information on the historical performance of the fund.</p>
                             <div style="display:block;" class="fundMobileAcc">
                                 <div class="graphCntFP clearfix">
                                     <div class="graphNav">
